Reorganize header, add super-menu, add story container in small-news-section

--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,7 @@
     <title>The Technigo Times</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Roboto:wght@400;500&display=swap" rel="stylesheet">    <link rel="icon" type="image/svg+xml" href="resources/favicon.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">    <link rel="icon" type="image/svg+xml" href="resources/favicon.svg">
   </head>
   <body>
     <header>
@@ -15,6 +14,17 @@
         <div class="hamburger"></div>
         <div class="search"></div>
         <div class="date">Friday 15 January 2021</div>
+      </div>
+      <div class="middle">
+        <div class="super-menu">
+          <ul>
+            <li>Boot camp</li>
+            <li>Courses</li>
+            <li>Stories</li>
+            <li>Hire</li>
+          </ul>
+        </div>
+        <img src="./resources/logo.svg" alt="The Technigo Times logo">
       </div>
       <div class="right">
         <div class="hamburger"></div>
@@ -32,16 +42,19 @@
         <li>Redux</li>
         <li>Node.js</li>
         <li>Agile</li>
-        <li>HTML/CSS</li>
+        <li>And some</li>
+        <li>More options</li>
+        <li>To make it</li>
+        <li>Look nice</li>
       </ul>
     </nav>
     <main>
       <div class="divider nav bottom"></div>
       <section class="podcasts">
         <div class="container">
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
+          <div class="item">Gonna add some content here,</div>
+          <div class="item">here</div>
+          <div class="item">and here</div>
         </div>
         <div class="divider"></div>
       </section>
@@ -55,7 +68,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="/code/resources/dorothea-oldani-Hhm_fL04bE8-unsplash.jpg" alt="image of a kitten">
+          <img src="./resources/dorothea-oldani-Hhm_fL04bE8-unsplash.jpg" alt="image of a kitten">
         </div>
         <div class="text">
           <h1>Stop looking for unicorns. We’ve got the next big thing.</h1>
@@ -64,49 +77,57 @@
         </div>
       </section>
       <section class="full-length-news">
-        <div class="text"></div>
+        <div class="text">Some loooong content is gonna go here</div>
       </section>
       <div class="divider"></div>
       <section class="small-news">
-        <div class="text">
-          <h1>
-            Prospect of Pardons in Final Days Fuels Market to Buy Access to Trump
-          </h1>
-          <p>
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
-          </p>
+        <div class="story">
+          <div class="text">
+            <h1>
+              Prospect of Pardons in Final Days Fuels Market to Buy Access to Trump
+            </h1>
+            <p>
+              Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
+            </p>
+          </div>
+          <div class="image">
+            <img src="./resources/kote-puerto-so5nsYDOdxw-unsplash.jpg" alt="image of a kitten">
+          </div>
         </div>
-        <div class="image">
-          <img src="/code/resources/kote-puerto-so5nsYDOdxw-unsplash.jpg" alt="image of a kitten">
+        <div class="story">
+          <div class="text">
+            <h1>Undeterred by Theory’s Unraveling, a QAnon ‘Meme Queen’ Marches On</h1>
+            <p>She posts dozens of times a day in support of an unhinged conspiracy theory. Her story hints at how hard it will be to bring some people back to reality, Kevin Roose writes.</p>
+          </div>
+          <div class="image">
+            <img src="./resources/ramiz-dedakovic-jerh2Nj1XWY-unsplash.jpg" alt="image of a kitten">
+          </div>
         </div>
-        <div class="text">
-          <h1>Undeterred by Theory’s Unraveling, a QAnon ‘Meme Queen’ Marches On</h1>
-          <p>She posts dozens of times a day in support of an unhinged conspiracy theory. Her story hints at how hard it will be to bring some people back to reality, Kevin Roose writes.</p>
+        <div class="story">
+          <div class="text">
+            <h1>
+              Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
+            </h1>
+            <p>
+              Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
+            </p>
+          </div>
+          <div class="image">
+            <img src="./resources/tran-mau-tri-tam-wiqbi_Uyvx8-unsplash.jpg" alt="image of a kitten">
+          </div>
         </div>
-        <div class="image">
-          <img src="/code/resources/ramiz-dedakovic-jerh2Nj1XWY-unsplash.jpg" alt="image of a kitten">
-        </div>
-        <div class="text">
-          <h1>
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
-          </h1>
-          <p>
-            Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
-          </p>
-        </div>
-        <div class="image">
-          <img src="/code/resources/tran-mau-tri-tam-wiqbi_Uyvx8-unsplash.jpg" alt="image of a kitten">
-        </div>
-        <div class="text">
-          <h1>
-            Guinea pig, (Cavia porcellus), a domesticated species of South American rodent belonging to the cavy family (Caviidae).
-          </h1>
-          <p>
-            It resembles other cavies in having a robust body with short limbs, large head and eyes, and short ears. The feet have hairless soles and short sharp claws. There are four toes on the forefeet and three on the hind feet. Several breeds of domesticated guinea pigs exist, which are sometimes grouped by coat texture and hair length. The term guinea pig is also used colloquially to refer to a person who serves as a test subject in an experiment.
-          </p>
-        </div>
-        <div class="image">
-          <img src="/code/resources/clover_truff1.jpg" alt="image of Dipper the guinea pig. Photo by the great Kathleen Rogers">
+        <div class="story">
+          <div class="text">
+            <h1>
+              Guinea pig, (Cavia porcellus), a domesticated species of South American rodent belonging to the cavy family (Caviidae).
+            </h1>
+            <p>
+              It resembles other cavies in having a robust body with short limbs, large head and eyes, and short ears. The feet have hairless soles and short sharp claws. There are four toes on the forefeet and three on the hind feet. Several breeds of domesticated guinea pigs exist, which are sometimes grouped by coat texture and hair length. The term guinea pig is also used colloquially to refer to a person who serves as a test subject in an experiment.
+            </p>
+          </div>
+          <div class="image">
+            <img src="./resources/clover_truff1.jpg" alt="image of Dipper the guinea pig. Photo by the great Kathleen Rogers">
+          </div>
         </div>
         <!-- <div class="text">
           <h1>
@@ -121,5 +142,7 @@
     <div class="divider"></div>
     <!-- <div class="divider"></div> -->
     <footer>This is the footer!</footer>
+    <!-- <script src="./script.js"></script> -->
   </body>
+
 </html>
