added a abbrivated logo/text for mobile devices

--- a/code/index.html
+++ b/code/index.html
@@ -28,10 +28,10 @@
         <label for="searchbox">
           <img class="search-button" src="../pictures/magnify.png">
         </label>
-        
     </nav>
     <div class="meteor"></div>
-    <h1>SPACE NEWS</h1>
+    <div class="logo"> SPACE NEWS </div>
+    <div class="small-logo"> SN </div>
   </header>
 
   <section class="big-news">
@@ -190,7 +190,7 @@
       <p>&copy; Pauline Andersson 2021</p>
       <container class="footer-img-container">
         <img src="../pictures/logo.svg">
-      </contaier>
+        </contaier>
     </div>
   </footer>
 
