--- a/code/signup.html
+++ b/code/signup.html
@@ -2,36 +2,37 @@
 <html id="top">
 
 <head>
-  <meta charset="ut-8" />
-  <meta name="viewport" content="width=device-width">
-  <title>Space News Site</title>
-  <link rel="stylesheet" href="./style.css" />
+    <meta charset="ut-8" />
+    <meta name="viewport" content="width=device-width">
+    <title>Space News Site</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <nav class="nav">
-    <input type="checkbox" id="checkbox" >
+    <input type="checkbox" id="checkbox">
     <label for="checkbox"><a class="menu-button"></a>
     </label>
-    <div class="menu-content"> 
-      <a href="contacts.html" target="blank">contact</a>
-      <a href="about.html" target="blank">about</a>
-      <a href="index.html" target="blank">home</a>
-      <a href="login.html" target="blank">login</a>
+    <div class="menu-content">
+        <a href="contacts.html" target="blank">contact</a>
+        <a href="about.html" target="blank">about</a>
+        <a href="index.html" target="blank">home</a>
+        <a href="login.html" target="blank">login</a>
     </div>
     <div class="search-content">
-    <input type="checkbox" id="searchbox" >
-    <label for="searchbox">
-      <img class="search-button" src="../pictures/magnify.png">
-    </label>
-    <div class="searchbar">
-      <input type="text" placeholder="Search..">
+        <input type="checkbox" id="searchbox">
+        <label for="searchbox">
+            <img class="search-button" src="../pictures/magnify.png">
+        </label>
+        <div class="searchbar">
+            <input type="text" placeholder="Search..">
+        </div>
     </div>
-  </div>
-  </nav>
+</nav>
 
-  <section class="signup">
-      <form class="signup-form">
-        <h2>SIGN UP!</h2><h3> Get acess to our news letter.</h3><br><br><br>
+<section class="signup">
+    <form class="signup-form">
+        <h2>SIGN UP!</h2>
+        <h3> Get acess to our news letter.</h3><br><br><br>
         <label for="first_name">First name:</label><br>
         <input type="text" id="first_name" name="first_name"><br>
         <label for="last_name">Last name:</label><br>
@@ -39,17 +40,17 @@
         <label for="email">E-mail:</label><br>
         <input type="email" id="email" name="email"><br><br>
         <input type="submit" value="Submit">
-      </form>
-  </section>
+    </form>
+</section>
 
-  <footer class="footer">
+<footer class="footer">
     <div class="footer-wrapper">
-      <p>&copy; Pauline Andersson 2021</p>
-      <container class="footer-img-container">
-        <img src="../pictures/logo.svg">
-      </contaier>
+        <p>&copy; Pauline Andersson 2021</p>
+        <container class="footer-img-container">
+            <img src="../pictures/logo.svg">
+            </contaier>
     </div>
-  </footer>
+</footer>
 
 </body>
 
