added a simple header for non-index sites

--- a/code/index.html
+++ b/code/index.html
@@ -30,8 +30,8 @@
         </label>
     </nav>
     <div class="meteor"></div>
-    <div class="logo"> SPACE NEWS </div>
-    <div class="small-logo"> SN </div>
+    <h1 class="logo"> SPACE NEWS </h1>
+    <h1 class="small-logo"> SN </h1>
   </header>
 
   <section class="big-news">
