--- a/code/signup.html
+++ b/code/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 
+<header class="simple-header">  
 <nav class="nav">
     <input type="checkbox" id="checkbox">
     <label for="checkbox"><a class="menu-button"></a>
@@ -28,6 +29,9 @@
         </div>
     </div>
 </nav>
+<h1 class="logo">SPACE NEWS</h1>
+<h1 class="small-logo">SN</h1>
+</header>
 
 <section class="signup">
     <form class="signup-form">
