All smaller new images added

--- a/code/index.html
+++ b/code/index.html
@@ -25,9 +25,9 @@
     <section class="big-news">
         <!-- Main news image, heading and text -->
         <div class="main-picture">
-            <div><img src="Prada Billie Holiday.jpg" alt="Prada to design Costume for upcoming Bille Holiday movie">
+            <div><img src="Prada-Billie-Holiday.jpg" alt="Prada to design Costume for upcoming Bille Holiday movie">
                 <div>
-                    <h2>Luxury fashion house Prada has designed Billie Holiday's most iconic outfits for new biopic</h2>
+                    <h2>Luxury brand Prada to design Billie Holiday's most iconic outfits for new biopic</h2>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget pellentesque sapien. In rutrum lorem ac tortor suscipit dictum. Quisque venenatis felis odio, eu porta est sodales ut. Nunc tempor magna id orci bibendum varius.
                             Donec tincidunt accumsan erat in dignissim. In odio purus, vulputate sed massa sit amet, commodo vulputate velit. Etiam tellus elit, hendrerit id fermentum at, gravida eu nulla. In venenatis nulla at gravida imperdiet. Duis
