added ./ in front of path in all of the html documents. Corrected one  title in hamburger menu page.

--- a/code/article1.html
+++ b/code/article1.html
@@ -10,13 +10,13 @@
 
 <body>
     <header class="articles-header">
-        <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
     <section>
         <article>
             <div class="article-container">
-                <img src="photos/dentalvisit.jpg" alt="Picture of a man undergoing a dental examination">
+                <img src="./photos/dentalvisit.jpg" alt="Picture of a man undergoing a dental examination">
                 <div>
                     <p><span class="breaking-news">BREAKING NEWS</span></p>
                     <h1>Dental clinics not affected by the new law.</h1>
