--- a/code/article2.html
+++ b/code/article2.html
@@ -10,13 +10,13 @@
 
 <body>
     <header class="articles-header">
-        <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
     <section>
         <article>
             <div class="article-container">
-                <img src="photos/implants.jpg" alt="Picture of a dental implant">
+                <img src="./photos/implants.jpg" alt="Picture of a dental implant">
                 <div>
                     <h3>Dental implants - what's new on the market?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
