--- a/code/article3.html
+++ b/code/article3.html
@@ -10,13 +10,13 @@
 
 <body>
   <header class="articles-header">
-    <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+    <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section>
     <article>
       <div class="article-container">
-      <img src="photos/invisalign.jpg" alt="Picture of a girl putting on invisalign braces">
+      <img src="./photos/invisalign.jpg" alt="Picture of a girl putting on invisalign braces">
       <div>
         <h3>Pros and cons of Invisalign braces</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
