--- a/code/article4.html
+++ b/code/article4.html
@@ -10,13 +10,13 @@
 
 <body>
   <header class="articles-header">
-    <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+    <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section>
     <article>
       <div class="article-container">
-        <img src="photos/child.jpg" alt="Picture of young child holding a toothbrush">
+        <img src="./photos/child.jpg" alt="Picture of young child holding a toothbrush">
         <div>
           <h3>New guidelines in pediatric dentistry from January 2021</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
