--- a/code/article5.html
+++ b/code/article5.html
@@ -10,13 +10,13 @@
 
 <body>
   <header class="articles-header">
-    <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+    <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section>
     <article>
       <div class="article-container">
-        <img src="photos/dentalclinic.jpg" alt="Picture of a dental clinic">
+        <img src="./photos/dentalclinic.jpg" alt="Picture of a dental clinic">
         <div>
           <h3>COVID-19 - one year later</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
