--- a/code/article7.html
+++ b/code/article7.html
@@ -10,13 +10,13 @@
 
 <body>
     <header class="articles-header">
-        <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
     <section>
         <article>
             <div class="article-container">
-                <img src="photos/humble.jpg" alt="Picture of toothbrushes from Humble Co">
+                <img src="./photos/humble.jpg" alt="Picture of toothbrushes from Humble Co">
                 <div>
                     <h3>Humble co</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
