--- a/code/contact.html
+++ b/code/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="contact-header">
-        <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
     <section class="contact-container">
