--- a/code/index.html
+++ b/code/index.html
@@ -9,23 +9,23 @@
   <body>
     <header>
       <div class="hamburger"> 
-        <a href="hamburger.html">
+        <a href="./hamburger.html">
           <div></div>
           <div></div>
           <div></div>
         </a>
       </div>
-      <img src="photos/dentnews.png" alt="Dentnews logo">
+      <img src="./photos/dentnews.png" alt="Dentnews logo">
       <nav class="navigation-container">
-        <a href="article1.html">BREAKING NEWS</a> 
-        <a href="about.html">ABOUT US</a> 
-        <a href="contact.html">CONTACT</a> 
+        <a href="./article1.html">BREAKING NEWS</a> 
+        <a href="./about.html">ABOUT US</a> 
+        <a href="./contact.html">CONTACT</a> 
       </nav>
     </header>
 
     <section class="big-news">
-        <a href="article1.html"> 
-           <img src="photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
+        <a href="./article1.html"> 
+           <img src="./photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
           <div>
             <p><span class="breaking-news">BREAKING NEWS</span></p> 
             <h1>Dental clinics not affected by the new pandemic law.</h1>
@@ -36,8 +36,8 @@
 
     <section class="news-container">
       <div class="news">
-        <a href="article2.html"> 
-          <img src="photos/implants.jpg" alt="Picture of a dental implant">
+        <a href="./article2.html"> 
+          <img src="./photos/implants.jpg" alt="Picture of a dental implant">
           <div>
             <h3>Dental implants - what's new on the market?</h3>
             <p>Here are the latest news regarding dental implants.</p>
@@ -46,8 +46,8 @@
       </div>
 
       <div class="news">
-        <a href="article3.html"> 
-          <img src="photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
+        <a href="./article3.html"> 
+          <img src="./photos/invisalign.jpg" alt="Picture of girl putting on invisalign braces">
           <div>
             <h3>Pros and cons of Invisalign braces</h3>
             <p>Virtually invisible. Unlike traditional braces, the Invisalign system
@@ -57,8 +57,8 @@
       </div>
 
       <div class="news">
-        <a href="article4.html"> 
-          <img src="photos/child.jpg" alt="Picture of a young child holding a toothbrush">
+        <a href="./article4.html"> 
+          <img src="./photos/child.jpg" alt="Picture of a young child holding a toothbrush">
           <div>
             <h3>New guidelines in pediatric dentistry from January 2021</h3>
             <p>Read the new guidelines.</p>
@@ -67,8 +67,8 @@
       </div>
 
       <div class="news">
-        <a href="article5.html"> 
-          <img src="photos/dentalclinic.jpg" alt="Picture of a dental clinic">
+        <a href="./article5.html"> 
+          <img src="./photos/dentalclinic.jpg" alt="Picture of a dental clinic">
           <div>
             <h3>COVID-19 - one year later</h3>
             <p>How has the pandemic affected small private practices around the country?</p>
@@ -77,8 +77,8 @@
       </div>
 
       <div class="news">
-        <a href="article6.html"> 
-          <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
+        <a href="./article6.html"> 
+          <img src="./photos/electricscooter.jpg" alt="Picture of an electric scooter">
           <div>
             <h3>Dental traumas</h3>
             <p>Emergency clinics have seen a high increase of dental traumas since the broad launch
@@ -88,8 +88,8 @@
       </div>
 
       <div class="news">
-        <a href="article7.html"> 
-          <img src="photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
+        <a href="./article7.html"> 
+          <img src="./photos/humble.jpg" alt="Picture of toothbrushed from Humble Co">
           <div>
             <h3>Humble Co</h3>
             <p>For healthier people, on a healthier planet. Humble Co is leading an eco-friendly
@@ -99,8 +99,8 @@
       </div>
 
       <div class="news">
-        <a href="article8.html">
-          <img src="photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
+        <a href="./article8.html">
+          <img src="./photos/electrictoothbrush2.jpg" alt="Picture of electric toothbrushes">
           <div>
             <h3>Top 10 best electric toothbrushes in 2021</h3>
             <p>Read the test here.</p>
