--- a/code/about.html
+++ b/code/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About us</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <header class="about-header">
-        <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section class="about-container">
