--- a/code/article6.html
+++ b/code/article6.html
@@ -10,13 +10,13 @@
 
 <body>
   <header class="articles-header">
-    <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+    <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section>
     <article>
       <div class="article-container">
-        <img src="photos/electricscooter.jpg" alt="Picture of an electric scooter">
+        <img src="./photos/electricscooter.jpg" alt="Picture of an electric scooter">
         <div>
           <h3>Dental traumas</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
