--- a/code/hamburger.html
+++ b/code/hamburger.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header class="hamburgermenu-header">
-        <a href="index.html"><img src="photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
     </header>
 
     <section class="nav-links">
         <ul>
-            <li><a href="article1.html">BREAKING NEWS</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="./article1.html">BREAKING NEWS</a></li>
+            <li><a href="./about.html">ABOUT US</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
         </ul>
     </section>
 
