removed Hamburger menu & added Balsamiq font

--- a/code/index.html
+++ b/code/index.html
@@ -5,25 +5,23 @@
   <meta charset="utf-8" />
   <title>Island Life</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@0;1&display=swap" rel="stylesheet">
+
   <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- Some kind of logo and navbar -->
     <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
     <h1>Island Life</h1>
 
-    <div class="hamburger">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-
-    <nav>
-      <a href="/meny/">Menu</a>
-      <a href="/Sign up/">Sign up</a>
-      <a href="Connect/">Connect</a>
+    <nav class="Menu">
+      <a href="/Accomadation/">Accomadation</a>
+      <a href="/Inspiration/">Inspiration</a>
+      <a href="Contact us/">Contact us</a>
     </nav>
 
   </header>
