Added classes, divs on img. Styled texts and headings. Started clean up code

--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
     <title>Daily Deep Dive</title>
     <link rel="stylesheet" href="./style.css"> <!-- I have removed a / after css" -->
   </head>
-  <body>
+  <body class="body">
     <header>
 
       <img src="assets/jellyfish.png" alt="logo" class="logo"> 
@@ -28,22 +28,33 @@
       </div>
       
     </header>
-
     <section class="big-news-container">
       <img src="assets/danist-bviex5lwf3s-unsplash.jpg" alt="Jelly Fish">
-      <div>
-        <h2>Take a Deep Breath</h2>
-        <p>One, two, three...</p></p>
-        <p>Lets dive down to where there are no up so or down!</p>
+      <div class="news-text">
+        <h2 class="h2">Take a Deep Breath</h2>
+        <p class="heading-two"><strong>One, two, three...</strong></p></p>
+        <p class="hedline-two"><strong>Lets dive down to where there are no up so or down!</strong></p>
+        <p class="blubb"> Blubb,blubb blubb blubb. Blubb, blubb blubb blubb blubb, blubb blubb blubb blubb,blubb blubb blubb.</p> 
+        <p class="blubb"> Blubb blubb blubb. Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb.</p>
+        <p class="blubb-on-mobile">Blubb blubb blubb...</p>
       </div>
     </section>
 
     <section class="four-news-container">
-        <img src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jelly Fish">
-        <img src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
-        <img src="assets/connor-wang-AUUdulLnRnE-unsplash.jpg" alt="Jelly Fish">
-        <img src="assets/tim-mossholder-1xSuJgr25jM-unsplash.jpg" alt="Jelly Fish">
+      <div class="four-image">
+        <img src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jelly Fish"></div>
+      </div>
+      <div>
+        <img class="four-image" src="assets/connor-wang-AUUdulLnRnE-unsplash.jpg" alt="Jelly Fish">
+      </div>
+      <div>  
+        <img class="four-image" src="assets/tim-mossholder-1xSuJgr25jM-unsplash.jpg" alt="Jelly Fish">
+      </div> 
+      <div> 
+        <img class="four-image" src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jelly Fish">
+      </div> 
     </section>
+    
 
     <section class="">
       <!-- The other news  -->
