Updated for tablet and laptop mode

--- a/code/index.html
+++ b/code/index.html
@@ -27,12 +27,19 @@
       <a href="#">BOOKINGS</a>
       <a href="#">CONTACT</a>
     </nav>
-    <a href="#"> <img src="images/menu.png" class="menu-bars"> </a>
+    <a href="#" class="menu-link"> 
+      <div class="menu-bars"> 
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    
+    </a>
   </header>
 
   <section class="big-news">
-    <!-- The big news content -->
-    <div>
+    <!-- BIG NEWS SECTION -->
+    <div class="big-news-img">
       <img src="images/river-5662293_640.jpg" alt="River image">
     </div>
     <div class="big-news-text">
@@ -40,12 +47,11 @@
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime iure
         libero illum mollitia sapiente! Eum, pariatur tenetur? </p>
     </div>
-
   </section>
 
   <section class="small-news">
-    <!-- The other news  -->
-    <div>
+    <!-- SMALL NEWS SECTION  -->
+    <div class="news-card">
       <img src="images/building-66789_640.jpg" alt="Building image">
       <div class="small-news-text">
         <h3>HOTEL NEWS</h3>
@@ -53,52 +59,53 @@
           sunt in culpa.</p>
       </div>
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/bed-4416515_640.jpg" alt="Bed image">
       <div class="small-news-text">
         <h3>ROOMS</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
           sunt in culpa.</p>
       </div>
-
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/architecture-1837150_640.jpg" alt="Lobby image">
       <div class="small-news-text">
         <h3>NEWS HOTEL DESIGN</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
           sunt in culpa.</p>
       </div>
-
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/woman-4373078_640.jpg" alt="Poolside image">
       <div class="small-news-text">
         <h3>NEW POOL</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
           sunt in culpa.</p>
       </div>
-
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/adult-1845108_640.jpg" alt="City image">
       <div class="small-news-text">
         <h3>CITY TRAVELLING</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
           sunt in culpa.</p>
       </div>
-
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/kayak-5543935_640.jpg" alt="Kayak image">
       <div class="small-news-text">
         <h3>SPORT</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
           sunt in culpa.</p>
       </div>
-
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/mountaineers-5649828_640.jpg" alt="Hiker image">
       <div class="small-news-text">
         <h3>HIKING</h3>
@@ -106,7 +113,8 @@
           sunt in culpa.</p>
       </div>
     </div>
-    <div>
+
+    <div class="news-card">
       <img src="images/airport-384562_640.jpg" alt="Airport image">
       <div class="small-news-text">
         <h3>AIRPORT NEWS</h3>
