hover-effect and box-shadow

--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,7 @@
     <nav class="navigation-container">
       <div class="nav-item">Articles</div>
       <div class="nav-item">Magazine</div>
+      <div class="nav-item">About</div>
       <div class="nav-item">Contact</div>
     </nav>
   </header>
@@ -22,7 +23,7 @@
     <!-- big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
-        <img src="img.jpg" alt="image">
+        <img class="img" src="img.jpg" alt="image">
       </div>
       <div class="big-news-text">
         <h1>En rubrik i stora bokstäver</h1>
@@ -44,22 +45,22 @@
         </div>
         <div class="news-card-container">
           <div class="news-card">
-            <img src="img.jpg" alt="">
+            <img class="img" src="img.jpg" alt="">
             <h2>En lite mindre rubrik</h2>
             <p>text</p>
           </div>
           <div class="news-card">
-            <img src="img.jpg" alt="">
+            <img class="img" src="img.jpg" alt="">
             <h2>En lite mindre rubrik</h2>
             <p>text</p>
           </div>
           <div class="news-card">
-            <img src="img.jpg" alt="">
+            <img class="img" src="img.jpg" alt="">
             <h2>En lite mindre rubrik</h2>
             <p>text</p>
           </div>
           <div class="news-card">
-            <img src="img.jpg" alt="">
+            <img class="img" src="img.jpg" alt="">
             <h2>En lite mindre rubrik</h2>
             <p>text</p>
           </div>
