add others news section and make it responsive

--- a/code/index.html
+++ b/code/index.html
@@ -55,28 +55,157 @@
         <section class="big-news">
           <a href="" class="block big-news-img">
             <img
-              src="https://miro.medium.com/max/1620/1*D73DS9prCslFeWWNNmlcnQ.jpeg"
-              alt="The 7 JS Array Methods you will need in 2021"
+              src="https://i.ytimg.com/vi/7X-d9MLysdI/maxresdefault.jpg"
+              alt="JSworld Conference 2021"
               class="res-img"
             />
           </a>
           <div class="big-news-content">
             <h1>
               <a href="" class="news-title">
-                The 7 JS Array Methods you will need in 2021</a
+                JavaScript World Conference by Frontend Love</a
               >
             </h1>
-            <p class="news-subtitle">
-              Get a great start off your year learning these useful methods
+            <span>20 Topics</span>
+            <span>100 Talks</span>
+            <span>50.000 Attendees</span>
+            <p>
+              JSworld Conference is the Worlds Premier Javascript Conference of
+              2021. JSworld Conference Online is the Largest & Most Epic
+              JavaScript Conference and Community Event of 2021. Learn & Talk
+              directly with the JavaScript Frontend Developer Leaders from
+              around the world.
             </p>
           </div>
         </section>
 
-        <section class="">
-          <!-- The other news  -->
+        <section class="news-card-cnt">
+          <ul class="">
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+            <li class="news-card">
+              <a href="" class="block"
+                ><img
+                  src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
+                  alt=""
+                  class="res-img"
+              /></a>
+              <div>
+                <h3>What is Lorem Ipsum?</h3>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+              </div>
+            </li>
+          </ul>
         </section>
       </div>
     </main>
+
     <!-- END OF MAIN PART OF PAGE -->
 
     <footer></footer>
